build/compile_output.txt
[  5%] Building CXX object CMakeFiles/kkurs.dir/src/InventoryScene.cpp.o
[  5%] Building CXX object CMakeFiles/kkurs.dir/src/CinematicEventScene.cpp.o
[  8%] Building CXX object CMakeFiles/kkurs.dir/src/UI/HUDPanel.cpp.o
/Users/afftobuss/Documents/GitHub/kurs/src/UI/HUDPanel.cpp:36:21: error: too many arguments to function call, expected 1, have 2; did you mean 'sf::Mouse::setPosition'?
   36 |     m_hudBackground.setPosition(0.f, m_windowHeight - hudHeight);
      |                     ^~~~~~~~~~~
      |                     sf::Mouse::setPosition
/opt/homebrew/include/SFML/Window/Mouse.hpp:121:22: note: 'sf::Mouse::setPosition' declared here
  121 | SFML_WINDOW_API void setPosition(Vector2i position);
      |                      ^
/Users/afftobuss/Documents/GitHub/kurs/src/InventoryScene.cpp:420:14: error: too many arguments to function call, expected 1, have 2; did you mean 'sf::Mouse::setPosition'?
  420 |     itemRect.setPosition(
      |              ^~~~~~~~~~~
      |              sf::Mouse::setPosition
/opt/homebrew/include/SFML/Window/Mouse.hpp:121:22: note: 'sf::Mouse::setPosition' declared here
  121 | SFML_WINDOW_API void setPosition(Vector2i position);
      |                      ^
1 error generated.
make[2]: *** [CMakeFiles/kkurs.dir/src/UI/HUDPanel.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
1 error generated.
make[2]: *** [CMakeFiles/kkurs.dir/src/InventoryScene.cpp.o] Error 1
make[1]: *** [CMakeFiles/kkurs.dir/all] Error 2
make: *** [all] Error 2
